# fastapi__sqlalchemy__dependency_injector

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  env.keep  pyproject.toml
docker/: postgres.yml
migrations/: env.py
migrations/versions/: 0040ddd26729_subscriptions.py
src/azure_sql/: application.py  azure_sql_manager.py  containers.py  database.py  dependencies.py  handlers.py  main.py  models.py  schemas.py
src/azure_sql/routers/: debug.py  subscriptions.py
tests/: conftest.py
tests/azure/: test_azure_sql_manager.py
tests/routers/: conftest.py  test_subscriptions.py
